After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 171503 - page setup crash
page setup crash
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Printing
git master
Other Linux
: Normal major
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2005-03-24 17:18 UTC by Andreas J. Guelzow
Modified: 2005-03-24 18:37 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Andreas J. Guelzow 2005-03-24 17:18:38 UTC
Distribution/Version: debian amd64

open page setup dialog,
change margins to 1in each,
set make default.
okay.
open page setup dialog
switch to header/footer page
change header space allotment
set make default
okay, -> crash

bt:
(gdb) bt
  • #0 mallopt
    from /lib/libc.so.6
  • #1 free
    from /lib/libc.so.6
  • #2 IA__g_free
    at gmem.c line 187
  • #3 gnm_gconf_set_printer_config
    at gnumeric-gconf.c line 840
  • #4 print_info_save
    at print-info.c line 352
  • #5 cb_do_print_ok
    at dialog-printer-setup.c line 1520
  • #6 IA__g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 77

Comment 1 Jody Goldberg 2005-03-24 17:28:45 UTC
replicated, valgrind shows a few issues.
Comment 2 Jody Goldberg 2005-03-24 18:37:33 UTC
There was a minor problem with the event handlers using button fields before
checking that it was a button event.  The crash was problem in the string
handling of gnm_gconf_set_printer_config.  It assumed control of the string
passed in.
I'll commit when my tree compiles again.