http://bugzilla.gnome.org/show_bug.cgi?id=171503 take control of the

2005-03-24  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=171503
	* src/gnumeric-gconf.c (gnm_gconf_set_printer_config) : take control
	  of the string.